# 3DWC

./: .gitignore  .travis.yml  3DWC.sln  App.h  README.md
3DWC/: 3DWC.vcxproj  3DWC.vcxproj.filters  App.h  WordConversion.h  main.cpp
3DWC/WordsFrequency/: CMakeLists.txt  Frequency.h  WordsFrequency.cpp  WordsFrequency.h
CmdArguments/: CmdArgument.cpp  CmdArgument.h  CmdArguments.cpp  CmdArguments.h
WordConversion/: WordConversion.cpp  WordConversion.h
WordsFrequency/: Frequency.cpp  Frequency.h  WordsFrequency.cpp  WordsFrequency.h
scripts/: vcpkg.sh
utility/: utility.cpp  utility.h
